--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <blockquote id="introquote">
     <div align="right">
-    <img src="./files/wanrong.jpg" height="250">
+    <img src="./files/wanrongzz.jpg" height="250">
     </div>
   </blockquote>
 
