--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <br>
     <p>
     Georgia Institute of Technology <br>
+    School of Industrial and Systems Engineering <br>
     email: wanrongz [at] gatech {dot} edu <br>
     <br>
     </p>
