--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@ Industrial and Systems Engineering</a> at Georgia Tech, advised by
     <a href="https://pwp.gatech.edu/rachel-cummings/" target="_blank"> Rachel Cummings</a> and <a href="https://www2.isye.gatech.edu/~ymei/" target="_blank"> Yajun Mei</a>. 
     Prior to Georgia Tech, I received my B.S. in Statistics at 
     <a href="http://www.vt.edu/" target="_blank">Peking University</a>.
-    There, I was advised by MinPing Qian. 
     </p>
 
     <p>
@@ -51,6 +50,13 @@ Industrial and Systems Engineering</a> at Georgia Tech, advised by
     <br>
 
     <h3>Conference Papers</h3>
+    
+    <p>
+    <pubtitle> Dataset-Level Attribute Leakage in Collaborative Learning </pubtitle> <br>
+    Wanrong Zhang, Shruti Tople, Olga Ohrimenko <br>
+    <i> arXiv preprint</i>. 2020.
+    [<a href="https://arxiv.org/abs/2006.07267" target="_blank">paper</a>]<br>
+    </p>
 
     <p>
     <pubtitle> PAPRIKA: Private Online False Discovery Rate Control </pubtitle> <br>
@@ -62,7 +68,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, advised by
     <p>
       <pubtitle> Privately Detecting Changes in Unknown Distributions </pubtitle> <br>
     Rachel Cummings, Sara Krehbiel, Yuliia Lut, Wanrong Zhang (Alphabetical order) <br>
-    <i> arXiv preprint</i>. 2019.
+    <i> ICML</i>. 2020.
     [<a href="https://arxiv.org/abs/1910.01327" target="_blank">paper</a>]<br>
     Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2019/" target="_blank">TPDP @CCS</a>. 2019.<br>  
     </p>
@@ -89,7 +95,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, advised by
     <p>
     <pubtitle> Bandit Change-Point Detection for Online Monitoring High-Dimensional Data </pubtitle> <br>
     Wanrong Zhang, Yajun Mei <br>
-    <i>Submitted to JASA</i>. 2019. <br>
+    <i>Submitted</i>. 2019. <br>
     Poster presentation in <a href="https://math.gsu.edu/yichuan/2019Workshop/" target="_blank">The 7th Workshop on Biostatistics and Bioinformatics</a>. 2019. <br>
     Best Student Poster Awards for the ASA Georgia Chapter.<br>
     </p>        
