--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>
     Postdoctoral Fellow in Computer Science <br>
     Harvard University <br>
-    email: wanrongz [at] gatech {dot} edu <br>
+    email: wanrongzhang [at] fas {dot} harvard {dot} edu <br>
     <br>
 
     
