--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <br>
 
     <h3>Conference Papers</h3>
+
+    <p>
+      <pubtitle> Concurrent Composition Theorems for all Standard Variants of Differential Privacy      </pubtitle> <br>
+      Salil Vadhan, Wanrong Zhang (Alphabetical order)<br>
+      <i> arxiv preprint</i>. 2022.
+      [<a href="https://arxiv.org/abs/2207.08335" target="_blank">paper</a>]<br>
+      Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2022/" target="_blank">TPDP @ICML</a>. 2022.<br>    
+      </p>
+
   
     <p>
       <pubtitle> Private Sequential Hypothesis Testing for Statisticians: Privacy, Error Rates, and Sample Size </pubtitle> <br>
