--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     Harvard University <br>
     email: wanrongzhang [at] fas {dot} harvard {dot} edu <br>
     <br>
+    I am currently on the job market, looking for positions in academia and research labs.
+    <br>
 
     
     
