--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <h2>Wanrong <span class="blue">Zhang</span></h2>
     <br>
     <br>
-    <br>
-    <br>
     <p>
     Postdoctoral Fellow in Computer Science <br>
     Harvard University <br>
     email: wanrongzhang [at] fas {dot} harvard {dot} edu <br>
+    <a href="https://scholar.google.com/citations?user=y8s4ok0AAAAJ&hl=en"><img src="./files/scholar.png" height="30" id="gsicon"></a> 
+    <a href="./files/WanrongZhang_CV.pdf"><img src="./files/cv.png" height="30" id="cvicon"></a> 
+    <br>
     <br>
     I am currently on the job market, looking for positions in academia and research labs.
     <br>
@@ -54,7 +55,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     </p>
 
     <p>
-    My research interests lie primarily in data privacy, with connections to statistics and machine learning. Specifically, My research mainly focuses on designing privacy-preserving algorithms for machine learning models and statistical analysis tools. I am also interested in formal privacy frameworks, as well as attacks to identify privacy vulnerabilities.
+      My research interests lie primarily in data privacy, in particular, in differential privacy, including (1) developing the theoretical foundations, (2) designing privacy-preserving algorithms for machine learning models and statistical analysis tools, and (3) adapting existing tools to solve domain-specific questions. In addition, I am interested in (4) broader privacy concerns, including understanding privacy vulnerabilities and proposing solutions.
     </p>
 
     <br>
@@ -62,7 +63,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <h3>Conference Papers</h3>
 
     <p>
-      <pubtitle> Concurrent Composition Theorems for all Standard Variants of Differential Privacy      </pubtitle> <br>
+      <pubtitle> Concurrent Composition Theorems for Differential Privacy      </pubtitle> <br>
       Salil Vadhan, Wanrong Zhang (Alphabetical order)<br>
       <i> arxiv preprint</i>. 2022.
       [<a href="https://arxiv.org/abs/2207.08335" target="_blank">paper</a>]<br>
@@ -143,16 +144,41 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <h3>Talks</h3>
 
+    <p>
+      <pubtitle> CATT 2022 Global Analytics Conference, UT Austin, </pubtitle> November 2022. <br>
+      Composition Theorems for Interactive Differential Privacy
+    </p>
 
     <p>
-      <pubtitle> ICML, </pubtitle> July 2021. <br>
-      PAPRIKA: Private Online False Discovery Rate Control
-      [<a href="https://icml.cc/media/icml-2021/Slides/8425.pdf" target="_blank">slides</a>]
+      <pubtitle> Societal Considerations and Applications Workshop, Simons Institute for the Theory of Computing, </pubtitle> November 2022. <br>
+      Concurrent Composition Theorems for Differential Privacy
+      [<a href="https://simons.berkeley.edu/talks/concurrent-composition-theorems-all-standard-variants-differential-privacy" target="_blank">video</a>]
+    </p>
+
+    <p>
+      <pubtitle> Google Privacy Seminar, </pubtitle> August 2022. <br>
+      Concurrent Composition Theorems for Differential Privacy
+    </p>
+
+    <p>
+      <pubtitle> ICSA Applied Statistics Symposium, </pubtitle> June 2022. <br>
+      Differentially Private Approaches for Streaming Data Analysis
+    </p>
+
+    <p>
+      <pubtitle> INFORMS ICS, </pubtitle> Tampa, January 2022. <br>
+      Private Sequential Hypothesis Testing for Statisticians: Privacy, Error Rates, and Sample Size
     </p>
 
     <p>
       <pubtitle> USENIX Security Symposium, </pubtitle> August 2021. <br>
       Leakage of Dataset Properties in Multi-Party Machine Learning
+    </p>
+
+    <p>
+      <pubtitle> ICML, </pubtitle> July 2021. <br>
+      PAPRIKA: Private Online False Discovery Rate Control
+      [<a href="https://icml.cc/media/icml-2021/Slides/8425.pdf" target="_blank">slides</a>]
     </p>
 
     <p>
@@ -212,7 +238,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
 
-    <br>I have been (or will be) on the program committee (i.e., a reviewer) for conferences: NeurIPS20, AAAI21, ICLR21, AISTATS21, ICML21, NeurIPS21, ICLR22, ICML22, FAccT22, COLT22, ISIT22  ; and workshops: TPDP20, TPDP21, TPDP22; and journals: Journal of Applied Statistics, Statistica Sinica, Journal of Machine Learning Research, Computers&Security.
+    <br>I have been (or will be) on the program committee (i.e., a reviewer) for conferences: NeurIPS20, AAAI21, ICLR21, AISTATS21, ICML21, NeurIPS21, ICLR22, ICML22, FAccT22, COLT22, ISIT22  ; and workshops: TPDP20, TPDP21, TPDP22; and journals: Journal of Applied Statistics, Statistica Sinica, Journal of Machine Learning Research, Transactions on Machine Learning Research, Computers&Security.
 
     </p>
     
@@ -220,7 +246,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <h3>Teaching</h3>
     <p>
-      <br> I am currently teaching <a href="https://opendp.github.io/cs208/spring2022/" target="_blank">CS 208: Applied Privacy for Data Science</a>
+      <br>  <a href="https://opendp.github.io/cs208/spring2022/" target="_blank">CS 208: Applied Privacy for Data Science</a>, Spring 2022
 
     <p>
       <pubtitle>Assistantships</pubtitle>
