--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <p>
       <pubtitle> Concurrent Composition Theorems for Differential Privacy      </pubtitle> <br>
       Salil Vadhan, Wanrong Zhang (Alphabetical order)<br>
-      <i> arxiv preprint</i>. 2022.
+      <i> STOC </i>. 2023.
       [<a href="https://arxiv.org/abs/2207.08335" target="_blank">paper</a>]<br>
       Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2022/" target="_blank">TPDP @ICML</a>. 2022.<br>    
       </p>
