--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <h3>Conference Papers</h3>
 
     <p>
+      <pubtitle> Continual Release of Differentially Private Synthetic Data    </pubtitle> <br>
+      with Mark Bun, Marco Gaboardi, Marcel Neuhoeffer<br>
+      In submission. 2023.  
+      </p>
+
+      <p>
+        <pubtitle> DP-Fast MH: Private, Fast, and Accurate Metropolis-Hastings for Large-Scale Bayesian Inference     </pubtitle> <br>
+       Wanrong Zhang, Ruqi Zhang<br>
+       In submission. 2023.   
+        </p>
+
+
+    <p>
       <pubtitle> Concurrent Composition Theorems for Differential Privacy      </pubtitle> <br>
       Salil Vadhan, Wanrong Zhang (Alphabetical order)<br>
       <i> STOC </i>. 2023.
@@ -123,6 +136,12 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <br>
     
     <h3>Journal Papers</h3>
+
+    <p>
+      <pubtitle> A standardised differential privacy framework for epidemiological modelling with mobile phone data </pubtitle> <br>
+      Merveille Koissi Savi, Akash Yavad, Wanrong Zhang, Navin Vembar, Andrew Schroeder, Satchit Balsari, Caroline Buckee, Salil Vadhan, N. Kishore <br>
+      In submission. 2023
+      </p>    
 
     <p>
     <pubtitle> Single and Multiple Change-Point Detection with Differential Privacy </pubtitle> <br>
