--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
       <p>
         <pubtitle> DP-Fast MH: Private, Fast, and Accurate Metropolis-Hastings for Large-Scale Bayesian Inference     </pubtitle> <br>
        Wanrong Zhang, Ruqi Zhang<br>
+       [<a href="http://arxiv.org/abs/2303.06171" target="_blank">paper</a>]<br>
        In submission. 2023.   
         </p>
 
