--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <br>
 
     <h3>Conference Papers</h3>
+    Note: The convention in TCS is to list authors in alphabetical order. (* indicates primary author)
+    <p></p>
 
     <p>
       <pubtitle> Continual Release of Differentially Private Synthetic Data    </pubtitle> <br>
-      with Mark Bun, Marco Gaboardi, Marcel Neuhoeffer<br>
+      Mark Bun, Marco Gaboardi, Marcel Neuhoeffer, Wanrong Zhang*<br>
       In submission. 2023.  
       </p>
 
@@ -78,7 +80,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
       <pubtitle> Concurrent Composition Theorems for Differential Privacy      </pubtitle> <br>
-      Salil Vadhan, Wanrong Zhang (Alphabetical order)<br>
+      Salil Vadhan, Wanrong Zhang* (Alphabetical order)<br>
       <i> STOC </i>. 2023.
       [<a href="https://arxiv.org/abs/2207.08335" target="_blank">paper</a>]<br>
       Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2022/" target="_blank">TPDP @ICML</a>. 2022.<br>    
@@ -120,7 +122,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
       <pubtitle> Privately Detecting Changes in Unknown Distributions </pubtitle> <br>
-    Rachel Cummings, Sara Krehbiel, Yuliia Lut, Wanrong Zhang (Alphabetical order) <br>
+    Rachel Cummings, Sara Krehbiel, Yuliia Lut, Wanrong Zhang* (Alphabetical order) <br>
     <i> ICML</i>. 2020.
     [<a href="https://arxiv.org/abs/1910.01327" target="_blank">paper</a>]<br>
     Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2019/" target="_blank">TPDP @CCS</a>. 2019.<br>  
@@ -128,7 +130,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
     <pubtitle> Differentially Private Change-point Detection </pubtitle> <br>
-    Rachel Cummings, Sara Krehbiel, Yajun Mei, Rui Tuo, Wanrong Zhang (Alphabetical order) <br>
+    Rachel Cummings, Sara Krehbiel, Yajun Mei, Rui Tuo, Wanrong Zhang* (Alphabetical order) <br>
     <i>NeurIPS</i>. 2018.
     [<a href="http://papers.nips.cc/paper/8280-differentially-private-change-point-detection" target="_blank">paper</a>]<br>
     Poster presentation in <a href="https://tpdp.journalprivacyconfidentiality.org/2018/" target="_blank">TPDP @CCS</a>. 2018.<br>
