--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     </p>
 
     <p>
-      My research interests lie primarily in data privacy, in particular, in differential privacy, including (1) developing the theoretical foundations, (2) designing privacy-preserving algorithms for machine learning models and statistical analysis tools, and (3) adapting existing tools to solve domain-specific questions. In addition, I am interested in (4) broader privacy concerns, including understanding privacy vulnerabilities and proposing solutions.
+      My research has been focused on data privacy, in particular, in differential privacy, including (1) developing the theoretical foundations, (2) designing privacy-preserving algorithms for machine learning models and statistical analysis tools, and (3) adapting existing tools to solve domain-specific questions. In addition, I am interested in (4) broader privacy concerns, including understanding privacy vulnerabilities and proposing solutions.
     </p>
-
+    Currently, I’m broadly interested in responsible AI. Specifically, (1) how to ensure privacy when users interact with AI tools without leaking users' query information; (2) how to avoid copy right violations when training AI models. Don't hesitate to email me if you are interested in these problems and want to collaborate.
+  </p>
+  
     <br>
 
     <h3>Conference Papers</h3>
