--- a/index.html
+++ b/index.html
@@ -167,6 +167,17 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
   
     <br>
 
+    <h3>White Paper</h3>
+
+    <p>
+      <pubtitle> Challenges towards the Next Frontier in Privacy </pubtitle> <br>
+      Rachel Cummings, Damien Desfontaines, David Evans, Roxana Geambasu, Matthew Jagielski, Yangsibo Huang, Peter Kairouz, Gautam Kamath, Sewoong Oh, Olga Ohrimenko, Nicolas Papernot, Ryan Rogers, Milan Shen, Shuang Song, Weijie Su, Andreas Terzis, Abhradeep Thakurta, Sergei Vassilvitskii, Yu-Xiang Wang, Li Xiong, Sergey Yekhanin, Da Yu, Huanyu Zhang, Wanrong Zhang <br>
+      2023.
+      [<a href="https://arxiv.org/pdf/2304.06929.pdf" target="_blank">paper</a>]
+      </p>   
+
+    <br>
+
     <h3>Talks</h3>
 
     <p>
@@ -263,7 +274,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
 
-    <br>I have been (or will be) on the program committee (i.e., a reviewer) for conferences: NeurIPS20, AAAI21, ICLR21, AISTATS21, ICML21, NeurIPS21, ICLR22, ICML22, FAccT22, COLT22, ISIT22  ; and workshops: TPDP20, TPDP21, TPDP22; and journals: Journal of Applied Statistics, Statistica Sinica, Journal of Machine Learning Research, Transactions on Machine Learning Research, Computers&Security.
+    <br>I have been (or will be) on the program committee (i.e., a reviewer) for conferences: NeurIPS20, AAAI21, ICLR21, AISTATS21, ICML21, NeurIPS21, ICLR22, ICML22, FAccT22, COLT22, ISIT22, FAccT23, COLT23  ; and workshops: TPDP20, TPDP21, TPDP22; and journals: Journal of Applied Statistics, Statistica Sinica, Journal of Machine Learning Research, Transactions on Machine Learning Research, Computers&Security.
 
     </p>
     
