--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
       <p>
         <pubtitle> DP-Fast MH: Private, Fast, and Accurate Metropolis-Hastings for Large-Scale Bayesian Inference     </pubtitle> <br>
        Wanrong Zhang, Ruqi Zhang<br>
+       <i> ICML </i>. 2023.
        [<a href="http://arxiv.org/abs/2303.06171" target="_blank">paper</a>]<br>
-       ICML. 2023.   
         </p>
 
 
