--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <p></p>
 
     <p>
+      <pubtitle> Concurrent Composition for Interactive Differential Privacy with Adaptive Privacy-Loss Parameters  </pubtitle> <br>
+      Samuel Haney, Michael Shoemate, Grace Tian, Salil Vadhan, Andrew Vyrros, Vicki Xu, Wanrong Zhang (Alphabetical order)<br>
+      In submission. 2023.  
+      </p>
+
+    <p>
       <pubtitle> Continual Release of Differentially Private Synthetic Data    </pubtitle> <br>
       Mark Bun, Marco Gaboardi, Marcel Neuhoeffer, Wanrong Zhang*<br>
       In submission. 2023.  
