--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
     <p></p>
 
     <p>
+      <pubtitle> Safeguarding Data in Multimodal AI: A Differentially Private Approach to CLIP Training  </pubtitle> <br>
+      Alyssa Huang, Peihan Liu, Ryumei Nakada, Linjun Zhang, Wanrong Zhang<br>
+      In submission. 2023.  
+      </p>
+
+    <p>
       <pubtitle> Concurrent Composition for Interactive Differential Privacy with Adaptive Privacy-Loss Parameters  </pubtitle> <br>
       Samuel Haney, Michael Shoemate, Grace Tian, Salil Vadhan, Andrew Vyrros, Vicki Xu, Wanrong Zhang (Alphabetical order)<br>
       In submission. 2023.  
