--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
       <pubtitle> Continual Release of Differentially Private Synthetic Data    </pubtitle> <br>
       Mark Bun, Marco Gaboardi, Marcel Neuhoeffer, Wanrong Zhang*<br>
       In submission. 2023.  
+      [<a href="https://arxiv.org/pdf/2306.07884" target="_blank">paper</a>]<br>
       </p>
 
       <p>
