--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
     Postdoctoral Fellow in Computer Science <br>
     Harvard University <br>
-    email: wanrongzhang [at] fas {dot} harvard {dot} edu <br>
+    email: imwanrongz [at] gmail {dot} com <br>
     <a href="https://scholar.google.com/citations?user=y8s4ok0AAAAJ&hl=en"><img src="./files/scholar.png" height="30" id="gsicon"></a> 
     <br>
     <br>
