--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Industrial and Systems Engineering</a> at Georgia Tech, where I was advised by
 
     <p>
       <pubtitle> Continual Release of Differentially Private Synthetic Data    </pubtitle> <br>
-      Mark Bun, Marco Gaboardi, Marcel Neuhoeffer, Wanrong Zhang<br>
-      In submission. 2023.  
+      Mark Bun, Marco Gaboardi, Marcel Neuhoeffer, Wanrong Zhang (Alphabetical order)<br>
+      <i> PODS </i>. 2024.  
       [<a href="https://arxiv.org/pdf/2306.07884" target="_blank">paper</a>]<br>
       </p>
 
